@@ -1,5 +1,8 @@
 2011-10-22  MIYAMUKO Katsuyuki
 
+	* xyzzy の format は justification (~<~>) をサポート
+	していないので修正
+
 	* simple-type-error が足りなかったので追加
 
 	* ansify のをいろいろ利用するようにした
